@startuml

entity User {
    *id : serial
    --
    *
}

entity Message {
    *id : serial
    --
    *
}

entity UserFavProblem {
    *id : serial
    --
    *
}

entity UserFavExercise {
    *id : serial
    --
    *
}

entity MessageExercise {
    *id : serial
    --
    *
}

entity MessageFood {
    *id : serial
    --
    *
}

entity Exercise {
    *id : serial
    --
    *
}

entity Body {
    *id : serial
    --
    *
}

entity Problem {
    *id : serial
    --
    *
}

entity Food {
    *id : serial
    --
    *
}

entity Photo {
    *id : serial
    --
    *
}

entity Comment {
    *id : serial
    --
    *
}

entity Product {
    *id : serial
    --
    *
}

entity UserHasContact {
    *id : serial
    --
    *
}

entity UserFavFood {
    *id : serial
    --
    *
}

entity Muscle {
    *id : serial
    --
    *
}

entity MuscleForExercise {
    *id : serial
    --
    *
}

entity MuscleForProblem {
    *id : serial
    --
    *
}

User ||..o{ Comment
User ||..o{ UserHasContact
UserHasContact }o..|| User
User ||..o{ Food : hasCooked
User ||..o{ UserFavProblem
UserFavProblem }o..|| Problem
User ||..o{ UserFavExercise
UserFavExercise }o..|| Exercise
User ||..o{ UserFavFood
UserFavFood }o..|| Food
User ||..o{ Message
User ||..o{ Product
User ||..|| Body
Body ||..o{ Problem
Problem ||..|{ MuscleForProblem
MuscleForProblem }o..|| Muscle

Message ||..o{ MessageExercise
MessageExercise }o..|| Exercise
Message ||..o{ MessageFood
MessageFood }o..|| Food

Problem ||..o{ Comment
Exercise ||..o{ Comment
Exercise ||..|{ MuscleForExercise
MuscleForExercise }o..|| Muscle
Food ||..o{ Comment
Food ||..|{ Photo


@enduml